@@ -1,3 +1,5 @@
+Go on with xa_recover test cases (think deeply about it... :)
+
 Develop XA driven specification case tests
 - tests all possible return codes for every function and an invalid one too
 
