@@ -1,6 +1,6 @@
 # XA Specification compliance case tests
 
-m4_include([xa_5_44.at])
+m4_include([xa_5_47.at])
 
 m4_include([xa_5_26.at])
 m4_include([xa_5_30.at])
@@ -8,4 +8,5 @@ m4_include([xa_5_32.at])
 m4_include([xa_5_37.at])
 m4_include([xa_5_40.at])
 m4_include([xa_5_42.at])
+m4_include([xa_5_44.at])
 
