@@ -1,5 +1,7 @@
 LOG:
 
+         - 0.5.18 implemented test cases XA/5.47/0.*
+
 20100728 - 0.5.17 implemented test cases XA/5.32/*.*
                   implemented test cases XA/5.37/*.*
                   implemented test cases XA/5.40/*.*
